--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 body {
     background-color: rgb(42,42,42);
     color: rgb(240,240,240);
-    font-family: Ubuntu;
+    font-family: Ubuntu, Helvetica, sans-serif;
 }
 
 a {
