--- a/style.css
+++ b/style.css
@@ -12,13 +12,15 @@ a {
 }
 
 #status {
-    font-size: 80px;
+    font-size: 10em;
     font-weight: bolder;
-    margin: 200px;
-    margin-top: 10%;
+    margin-top: 9%;
+    margin-left: 5%;
     float: left;
-    max-width: 600px;
+    max-width: 50%;
+    display: block;
 }
+
 
 #further {
     margin-top: 40px;
@@ -37,4 +39,30 @@ a {
 
 #footer {
     margin-top: 50px;
+}
+
+.closed {
+    color: rgb(224, 91, 94);
+}
+
+.open {
+    color: rgb(134, 200, 128);
+}
+
+
+
+
+
+@media screen and (max-width: 1155px) {
+    #status {
+        font-size: 10em;
+        max-width: 600px;
+    }
+}
+
+@media screen and (max-width: 1044px) {
+    #status {
+        font-size: 7em;
+        max-width: 400px;
+    }
 }
