--- a/style.css
+++ b/style.css
@@ -11,18 +11,19 @@ a {
     text-decoration: none;
 }
 
+
 #content {
     float: left;
-    max-width: 600px;
+    max-width: 50%;
 }
 
 #status {
-    font-size: 10em;
+    font-size: 7em;
     font-weight: bolder;
     margin-top: 9%;
     margin-left: 5%;
     float: left;
-    max-width: 50%;
+    width: 100%;
     display: block;
     margin: 100px;
     margin-bottom: 50px;
@@ -56,13 +57,14 @@ a {
     color: rgb(134, 200, 128);
 }
 
-
-
+.dhcp {
+    color: #ffbb55;
+}
 
 
 @media screen and (max-width: 1155px) {
     #status {
-        font-size: 10em;
+        font-size: 7em;
         max-width: 600px;
     }
 }
@@ -70,7 +72,7 @@ a {
 @media screen and (max-width: 1090px) {
     #status {
         font-size: 7em;
-        max-width: 300px;
+        max-width: 490px;
     }
     #aside {
         margin-right: 50px;
@@ -82,7 +84,7 @@ a {
 @media screen and (max-width: 1000px) {
     #status {
         font-size: 5em;
-        max-width: 200px;
+        max-width: 350px;
     }
     #aside {
         margin-right: 30px;
@@ -95,11 +97,16 @@ a {
     #status {
         font-size: 2em;
         margin: auto;
+        float: none;
+        display: block;
     }
     #aside {
         margin: auto;
+        float: none;
     }
-
+    #content {
+        float: none;
+    }
     #further {
         font-size: 1em;
     }
